<resources>
    <string name="app_name">FoodRunner</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="fav_restaurant">Favorites</string>
    <string name="fav_order_history">Order History</string>
    <string name="fav_faq">FAQs</string>
    <string name="fav_logout">Log Out</string>
    <string name="nav_header_desc" />
    <string name="nav_username">Username</string>
    <string name="nav_phone">1115555555</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="food_runner">Food Runner</string>
    <string name="mobile_number">Enter Mobile Number</string>
    <string name="password">Enter Password</string>
    <string name="log_in">LOG IN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register_yourself">Dont Have An Account?\nSign Up Now</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="preference_file_name">FoodApp</string>
    <string name="email_address">Email Address</string>
    <string name="Next">NEXT</string>
    <string name="forgot_password_steps">Enter your Registered Mobile Number and Email below:</string>
    <string name="otp_received">Enter the OTP received below:</string>
    <string name="enter_otp">Enter OTP (4 characters)</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="enter_new_password_again">Confrim New Password</string>
    <string name="submit">SUBMIT</string>
    <string name="name_characters">Name (Min 3 characters)</string>
    <string name="enter_address">Enter Address</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="favorites_fragment">Favorites Fragment</string>
    <string name="history_fragment">History Fragment</string>
    <string name="faq_fragment">FAQ Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="name_of_the_restaurant">Name Of The Restaurant</string>
    <string name="cost">200</string>
    <string name="rating">4.5</string>
    <string name="per_person">/Person</string>
    <string name="choose_menu">Choose from the Menu listed below:</string>
    <string name="sno">1.</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="btn_add">Add</string>
    <string name="btn_remove">Remove</string>
    <string name="item_cost">Rs. 400</string>
    <string name="proceed_to_cart">Proceed To Cart</string>
    <string name="action_sort">Sort</string>
    <string name="menu_list_head">Choose from the Menu listed below:</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="order_placed">Your Order has been successfully placed!</string>
    <string name="menu_item">Menu Item</string>
    <string name="menu_item_cost">Rs. 200</string>

    <string name="faq_answer_five">A.5 You can choose your preferred batch date while signing up for the training program. Delivery Personnel can contact the FoodRunner team for more info</string>
    <string name="faq_answer_four">A.4 We recommend spending 5-10 minutes to decide your favorite restaurant. However, the actual time can be decided by you as per your convenience.</string>
    <string name="faq_answer_one">A.1 As soon as the order is placed a deliver personnel will be assigned to pick your delivery from the concerned restaurant. The order will be delivered to your address in no time.</string>
    <string name="faq_answer_six">A.6 You will be able to download the certificate once you complete your training and take the final test.</string>
    <string name="faq_answer_three">A.3 The delivery time would be estimated according to your location.</string>
    <string name="faq_answer_two">A.2 As this is a purely online program, you can choose to learn at any order at time of the day. We will recommend a scheduled to be followed throughout the program, but the actual timings and learning hours can be decided by Restaurant according to their convenience.</string>
    <string name="faqs">FAQs</string>
    <string name="name">Name</string>
    <string name="dummy_phone">+91-1234567890</string>
    <string name="address">Delivery Address</string>
    <string name="order_history_static_text">Your previous orders are listed below :</string>
    <string name="no_orders">"You haven't placed any orders yet"</string>
    <string name="dummy_date">01/08/20</string>
    <string name="ok">Ok</string>
    <string name="no_favorite_restaurants">No Favorite Restaurants</string>
</resources>
