<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_myprofile"
            android:icon="@drawable/ic_profile"
            android:title="@string/my_profile" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_fav"
            android:title="@string/fav_restaurant" />

        <item
            android:id="@+id/nav_order_history"
            android:icon="@drawable/ic_order_history"
            android:title="@string/fav_order_history" />

        <item
            android:id="@+id/nav_faqs"
            android:icon="@drawable/ic_faq"
            android:title="@string/fav_faq" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/fav_logout" />

    </group>
</menu>
