<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:id="@+id/rlLogin">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:src="@drawable/scooter"
        android:padding="6dp"/>

    <TextView
        android:id="@+id/txtCompanyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgLogo"
        android:layout_centerHorizontal="true"
        android:text="@string/food_runner"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/etMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgLogo"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="25dp"
        android:drawableLeft="@drawable/ic_phone"
        android:drawablePadding="5dp"
        android:hint="@string/mobile_number"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:maxLength="10"
        android:maxLines="1"
        android:inputType="number"
        />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etMobileNumber"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="25dp"
        android:hint="@string/password"
        android:drawableLeft="@drawable/ic_password"
        android:drawablePadding="5dp"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:maxLength="10"
        android:maxLines="1"
        android:inputType="numberPassword"
        />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:layout_marginHorizontal="25dp"
        android:layout_below="@+id/etPassword"
        android:text="@string/log_in"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/forgot_password"
        android:textColor="#ffffff"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:layout_centerHorizontal="true"
        android:text="@string/register_yourself"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textAlignment="center"
        />



</RelativeLayout>