<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rlLoading"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="8"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/txtSNo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/sno"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4.8"
            android:orientation="vertical"
            android:padding="6dp">

            <TextView
                android:id="@+id/txtItemName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/restaurant_name"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtItemCost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_rupee"
                android:drawablePadding="10dp"
                android:padding="2dp"
                android:text="@string/item_cost"
                android:textSize="16sp" />

        </LinearLayout>

        <Button
            android:id="@+id/btnAddToCart"
            android:layout_width="0dp"
            android:layout_height="28dp"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="2.2"
            android:background="@color/colorPrimary"
            android:text="@string/btn_add"
            android:textAllCaps="false"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:visibility="visible" />

        <Button
            android:id="@+id/btnRemoveFromCart"
            android:layout_width="0dp"
            android:layout_height="28dp"
            android:layout_gravity="center"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_weight="2.2"
            android:background="#FFC400"
            android:text="@string/btn_remove"
            android:textAllCaps="false"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white"
            android:visibility="gone" />
    </LinearLayout>

</RelativeLayout>