<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:src="@drawable/scooter"
        android:padding="6dp"/>


    <TextView
        android:id="@+id/txtCompanyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgLogo"
        android:layout_centerHorizontal="true"
        android:text="@string/food_runner"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtSteps"
        android:layout_below="@+id/txtCompanyName"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="25dp"
        android:text="@string/forgot_password_steps"
        android:textSize="18sp"
        android:textColor="#ffffff"/>

    <EditText
        android:id="@+id/etMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtSteps"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="25dp"
        android:drawableLeft="@drawable/ic_phone"
        android:drawablePadding="5dp"
        android:hint="@string/mobile_number"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:maxLength="10"
        android:maxLines="1"
        android:inputType="number"
        />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etMobileNumber"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="25dp"
        android:hint="@string/email_address"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="5dp"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:layout_marginHorizontal="25dp"
        android:layout_below="@+id/etEmail"
        android:text="@string/Next"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:textStyle="bold"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/progressLayout" >

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:layout_centerInParent="true"/>

    </RelativeLayout>



</RelativeLayout>