<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity"
    android:background="@color/colorPrimary">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="0dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark">

            <!--<androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorToolbar"
                android:minHeight="?attr/actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.Dark"
                app:layout_scrollFlags="scroll|enterAlways" />-->

         </com.google.android.material.appbar.AppBarLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_below="@+id/coordinatorLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/scooter"
        android:padding="6dp"/>


    <TextView
        android:id="@+id/txtCompanyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgLogo"
        android:layout_centerHorizontal="true"
        android:text="@string/food_runner"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtCompanyName"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="25dp"
        android:drawableLeft="@drawable/ic_profile"
        android:drawablePadding="5dp"
        android:hint="@string/name_characters"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:maxLines="1"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etUsername"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="25dp"
        android:hint="@string/email_address"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="5dp"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        />

    <EditText
        android:id="@+id/etMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etEmail"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="25dp"
        android:drawableLeft="@drawable/ic_phone"
        android:drawablePadding="5dp"
        android:hint="@string/mobile_number"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:maxLength="10"
        android:maxLines="1"
        android:inputType="number"
        />

    <EditText
        android:id="@+id/etAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etMobileNumber"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="25dp"
        android:drawableLeft="@drawable/ic_address"
        android:drawablePadding="5dp"
        android:hint="@string/enter_address"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:inputType="textPostalAddress"
        />

    <EditText
        android:id="@+id/etNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etAddress"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="25dp"
        android:hint="@string/enter_new_password"
        android:drawableLeft="@drawable/ic_password"
        android:drawablePadding="5dp"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:maxLines="1"
        android:inputType="numberPassword"
        />

    <EditText
        android:id="@+id/etConfirmNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etNewPassword"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="25dp"
        android:hint="@string/enter_new_password_again"
        android:drawableLeft="@drawable/ic_confirm_pass"
        android:drawablePadding="5dp"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:maxLines="1"
        android:inputType="numberPassword"
        />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:layout_marginHorizontal="25dp"
        android:layout_below="@+id/etConfirmNewPassword"
        android:text="@string/submit"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:textStyle="bold"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/progressLayout" >

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

</RelativeLayout>