<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorPrimary">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip"
        android:padding="4.0dip">

        <ImageView
            android:id="@+id/imgUserImage"
            android:layout_width="80.0dip"
            android:layout_height="80.0dip"
            android:layout_centerHorizontal="true"
            android:scaleType="centerCrop"
            android:src="@drawable/profile_icon" />

        <LinearLayout
            android:id="@+id/llProfile"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgUserImage"
            android:layout_marginLeft="10.0dip"
            android:layout_marginTop="20.0dip"
            android:layout_marginRight="10.0dip"
            android:orientation="vertical"
            android:padding="4.0dip">

            <TextView
                android:id="@+id/txtUserName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:padding="10.0dip"
                android:text="@string/name"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/txtPhone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dip"
                android:background="@color/colorPrimary"
                android:padding="10.0dip"
                android:text="@string/dummy_phone"
                android:textAlignment="center"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dip"
                android:background="@color/colorPrimary"
                android:padding="10.0dip"
                android:text="@string/email_address"
                android:textAlignment="center"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/txtAddress"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dip"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:padding="10.0dip"
                android:text="@string/address"
                android:textAlignment="center"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#ffffff" />
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>