<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:background="#ffffff"
    app:cardCornerRadius="4dp"
    android:id="@+id/cardRestaurant"
   >

    <LinearLayout
        android:id="@+id/llContent"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#ffffff"
        android:weightSum="10">

        <ImageView
            android:id="@+id/imgRestaurant"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="2.25"
            android:padding="5dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5.8">

            <TextView
                android:id="@+id/txtRestaurantName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/name_of_the_restaurant"
                android:textColor="#000000"
                android:textStyle="normal"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="5dp"/>

            <ImageView
                android:id="@+id/imgRupee"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:src="@drawable/ic_rupee"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"
                android:layout_marginHorizontal="5dp"/>

            <TextView
                android:id="@+id/txtCost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:padding="5dp"
                android:layout_toRightOf="@id/imgRupee"
                android:layout_marginBottom="18dp"
                android:text="@string/cost"
                android:textSize="17sp"
                android:textColor="@color/colorAdaptive"
                 />

            <!--<TextView
                android:id="@+id/txtPerPerson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/txtCost"
                android:layout_alignParentBottom="true"
                android:padding="5dp"
                android:layout_marginBottom="18dp"
                android:text="@string/per_person"
                android:textSize="17sp"
                android:textColor="#000000"/>-->
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1.95" >

            <ImageView
                android:id="@+id/imgFavorite"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_favo"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                />

            <TextView
                android:id="@+id/txtRatings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rating"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="15dp"
                android:padding="6dp"
                android:textAlignment="center"
                android:drawableLeft="@drawable/ic_ratings"
                android:drawablePadding="4dp"/>

        </RelativeLayout>


    </LinearLayout>


</androidx.cardview.widget.CardView>